	 core' message appearing (libspectrum_0_2_1-branch).
20040205 Makefile.am, README, configure.in, doc/: doc updates
	 (libspectrum_0_2_1-branch).
20040205 configure.in: bump version number to 0.2.1pre2
	 (libspectrum_0_2_1-branch).
20040205 TAG: libspectrum_0_2_1pre2 (libspectrum_0_2_1-branch)
20040211 configure.in: bump version number to 0.2.1
	 (libspectrum_0_2_1-branch).
20040211 tzx_read.c: don't double step over count when reading select
	 blocks (libspectrum_0_2_1-branch).
20040212 TAG: libspectrum_0_2_1 (libspectrum_0_2_1-branch).
20040223 Merge changes from libspectrum_0_2_1 to HEAD.
20040223 TAG: libspectrum-0_2_1-merge-1
20040227 accessor.pl,libspectrum.c,libspectrum.h.in,szx.c,timings.c,z80.c:
	 Scorpion support (part of patch #874504) (Stuart Brady).
20040229 accessor.pl, libspectrum.c, z80.c: the Scorpion no longer has
	 CAPABILITY_PLUS3_MEMORY.
20040303 szx.c: the Scorpion is machine type 10 (Stuart Brady).
20040307 z80.c: don't skip RAM page 11 when saving Scorpion snaps.
20040318 Makefile.am,ide.c,libspectrum.h.in: support for .hdf hard disk
	 images. Basically just Garry's patch with some coding style
	 changes (patch #916186) (Garry Lancaster).
20040318 ide.c: open .hdf files in binary mode.
20040319 ide.c: ftell and fseek are not the same thing...
20040319 ide.c,libspectrum.h.in: implement a write cache for the IDE
	 drives.
20040320 szx.c: bump version number to 1.2, save Scorpion port 0x1ffd
	 and add some comments about the failures in the .szx
	 specification.
20040320 libspectrum.c,libspectrum.h.in: add identification of .hdf hard
	 disk images.
20040320 accessor.pl,snap_accessors.txt,szx.c: add support for the Beta
	 128 block of the .szx format.
20040320 libspectrum.c,libspectrum.h.in: add an 'Even M1' capability.
20040401 libspectrum.h.in,sna.c,szx.c,z80.c: minimalistic +3e support.
20040402 libspectrum.c,timings.c: enough to make the +3e support actually
	 usable by Fuse.