@@ -191,3 +191,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040401 libspectrum.h.in,sna.c,szx.c,z80.c: minimalistic +3e support.
 20040402 libspectrum.c,timings.c: enough to make the +3e support actually
 	 usable by Fuse.
+20040402 libspectrum.h.in,tape.c: add libspectrum_tape_write() function.
